Update Test settings