@@ -7,7 +7,7 @@ plugins {
 group 'io.github.rbxapi'
 version '1.0-SNAPSHOT'
 sourceCompatibility = 1.11
-def globalgradleVersion = '5.2.1'
+def globalgradleVersion = '5.3.1'
 
 repositories {
     mavenCentral()
@@ -30,7 +30,7 @@ subprojects {
     }
     afterEvaluate {
         repositories {
-            jcenter()
+            mavenCentral()
         }
 
         compileJava {
@@ -38,7 +38,6 @@ subprojects {
             doFirst {
                 options.compilerArgs = [
                         '--module-path', classpath.asPath,
-                        '--add-modules', 'io.github.rbxapi.javablox.api'
                 ]
                 classpath = files()
             }
@@ -49,7 +48,6 @@ subprojects {
             doFirst {
                 options.compilerArgs = [
                         '--module-path', classpath.asPath,
-                        '--add-modules', 'io.github.rbxapi.javablox.api',
                         '--add-modules', 'org.junit.jupiter.api',
                         '--add-reads', "$moduleName=org.junit.jupiter.api",
                         '--patch-module', "$moduleName=" + files(sourceSets.test.java.srcDirs).asPath,
@@ -58,27 +56,18 @@ subprojects {
             }
         }
 
-        javadoc {
-            inputs.property("moduleName", moduleName)
-            doFirst {
-                exclude "**/module-info.java"
-                options.addStringOption('-module-path', classpath.asPath)
-                options.addStringOption('-add-modules', 'io.github.rbxapi.javablox.api')
-                options.addStringOption('-class-path', "")
-                options.addBooleanOption('html5', true)
-                options.addBooleanOption('verbose', true)
-            }
-        }
-
         test {
-            useJUnitPlatform()
-
+            inputs.property("moduleName", moduleName)
             doFirst {
                 jvmArgs = [
                         '--module-path', classpath.asPath,
-                        '--add-modules', 'io.github.rbxapi.javablox.api'
+                        '--add-modules', 'ALL-MODULE-PATH',
+                        '--add-reads', "$moduleName=org.junit.jupiter.api",
+                        '--patch-module', "$moduleName=" + files(sourceSets.test.java.outputDir).asPath,
                 ]
+                classpath = files()
             }
+            useJUnitPlatform()
         }
     }
 }
